# REapk

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  SECURITY.md  mkdocs.yml  pyproject.toml  xapk2apk.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  pipeline.bpmn
docs/dex-engine/: api.md  concepts.md  getting-started.md  guide.md  index.md  playground.md
examples/notebooks/: README.md  _gen.py  playground.ipynb
reapk/: __init__.py  api.py  axml.py  bundle.py  cli.py  commands.py  engines.py  errors.py  manifest.py  playground.py  secrets.py  sign.py  zipalign.py
reapk/dex/: __init__.py  _leb.py  asm.py  disasm.py  file.py  pool.py  writer.py
scripts/: bench_apk.py
tests/: conftest.py  test_integration.py  test_playground.py  test_sign.py  test_unit.py
